<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/latitude"
            android:text="@string/latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="3dp"/>

        <TextView
            android:id="@+id/latitudeVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:layout_column="2"
            android:layout_weight="1"
            android:layout_margin="3dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/longitude"
            android:text="@string/longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="3dp" />

        <TextView
            android:id="@+id/longitudeVal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_data"
            android:layout_column="2"
            android:layout_weight="1"
            android:layout_margin="3dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp">

        <Button
            android:id="@+id/getLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_actual_position"
            android:layout_column="1"
            android:layout_weight="1"
            />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/driverIdText"
            android:text="@string/driverID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="3dp" />

        <EditText
            android:id="@+id/driverIdValue"
            android:inputType="numberSigned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="3dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp">

        <TextView
            android:id="@+id/vehicleIdText"
            android:text="@string/vehicleId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="3dp" />

        <EditText
            android:id="@+id/vehicleIdValue"
            android:inputType="numberSigned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_weight="1"
            android:layout_margin="3dp" />

    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="3dp">

        <Button
            android:id="@+id/updateIds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updateIds"
            android:layout_column="1"
            android:layout_weight="1"
            />

    </TableRow>

</TableLayout>